--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "server": "nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon -r dotenv/config index.js"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "helmet": "^3.21.2",
+    "knex": "^0.20.4",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "2.0.2"
   }
 }
